# hitmap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  hitmap
.github/workflows/: ci.yml  release.yml  update-homebrew-tap.yml
docs/: KITTY_GALLERY.md  TEXT_GALLERY.md
scripts/: capture-readme-previews.sh  capture-text-render.py  generate-gallery.sh  generate-text-gallery.sh
src/: authors.rs  common.rs  config.rs  doctor.rs  git.rs  main.rs  palette.rs  render.rs  scale.rs  sections.rs  terminal.rs  text.rs
